--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,7 @@
         <ul class="tab-list">
             <li class="tab-item active" data-target="default-tools-container"><a href="#default-tools">Default Tools</a></li>
             <li class="tab-item" data-target="suggested-tools-container"><a href="#suggested-tools">Suggested Tools</a></li>
+            <li class="tab-item" data-target="custom-tools-container"><a href="#custom-tools">Custom Tools</a></li>
         </ul>
 
         <div class="tab-content">
@@ -68,6 +69,11 @@
                 <button class="action-button" data-action="improve_los" data-tooltip="Suggests ways to improve Length of Stay based on patient data">Improve LOS</button>
                 <button class="action-button" data-action="cut_readmission" data-tooltip="Identifies factors to reduce readmission risk">Cut Readmission Risk</button>
                 <button class="action-button" data-action="improve_care" data-tooltip="Recommends improvements to clinical care based on your notes">Improve Clinical Care</button>
+            </div>
+
+            <!-- Custom Tools Container -->
+            <div id="custom-tools-container" class="tab-pane">
+                <!-- Custom tools will be loaded here dynamically -->
             </div>
         </div>
     </div>
