--- a/templates/signup.html
+++ b/templates/signup.html
@@ -249,6 +249,17 @@
                         <option value="physician_assistant">Physician Assistant</option>
                     </select>
                 </div>
+                <div class="input-group">
+                    <label for="institution">Institution/Hospital Name</label>
+                    <input 
+                        type="text" 
+                        id="institution" 
+                        name="institution" 
+                        required 
+                        placeholder="Enter your institution or hospital name"
+                        class="input-field"
+                    >
+                </div>
                 <div class="checkbox-container">
                     <input type="checkbox" id="eula-checkbox" name="agreeToEula" required disabled>
                     <label for="eula-checkbox">I agree to the <a href="#" class="agreement-link" data-agreement="eula">End User License Agreement</a></label>
