--- a/templates/payment.html
+++ b/templates/payment.html
@@ -25,10 +25,8 @@
             </div>
 
             <form action="/create-checkout-session" method="POST">
-                <input type="hidden" name="userId" value="{{ user_id }}">
-                <button type="submit" class="submit-button">
-                    Proceed to Payment
-                </button>
+                <input type="hidden" name="lookup_key" value="{{PRICE_LOOKUP_KEY}}" />
+                <button id="checkout-and-portal-button" type="submit">Checkout</button>
             </form>
         </div>
     </div>
