--- a/templates/signup.html
+++ b/templates/signup.html
@@ -250,15 +250,9 @@
                     </select>
                 </div>
                 <div class="input-group">
-                    <label for="institution">Institution/Hospital Name</label>
-                    <input 
-                        type="text" 
-                        id="institution" 
-                        name="institution" 
-                        required 
-                        placeholder="Enter your institution or hospital name"
-                        class="input-field"
-                    >
+                    <div class="icon"><i class="ri-hospital-line"></i></div>
+                        <label for="institution"></label>
+                        <input type="text" id="institution" name="institution" required="" placeholder="Enter your institution or hospital name" class="input-field">
                 </div>
                 <div class="checkbox-container">
                     <input type="checkbox" id="eula-checkbox" name="agreeToEula" required disabled>
