--- a/templates/landing.html
+++ b/templates/landing.html
@@ -400,8 +400,8 @@
             </div>
         </nav>
         <div class="main-logo">
-            <svg src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo"></svg>
-            <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo dark-mode-logo">
+            <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo dark-mode-logo" width="150" height="35">
+            <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo" width="150" height="35">
         </div>
         <!-- Move logo to hero section -->
         <main>
@@ -525,7 +525,7 @@
                 <div class="footer-logo">
                     <div class="logo-container">
                         <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo dark-mode-logo" width="150" height="35">
-                        <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo" width="150" height="35">
+                        <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo" width="150" height="35">
                     </div>
                     <p>ChartWitch - Automate Medical Notes</p>
                 </div>
