Forget pass added

--- a/templates/login.html
+++ b/templates/login.html
@@ -140,6 +140,10 @@
             <div class="form-toggle" id="login-toggle">
                 <p>Don't have an account? <a href="/signup">Sign up</a></p>
             </div>
+
+            <div style="text-align:center; margin-top:10px;">
+                <a href="/forgot-password" style="color:#00c6ff; text-decoration:none;">Forgot Password?</a>
+            </div>
         </div>
     </div>
 
